--- a/generation.yaml
+++ b/generation.yaml
@@ -89,8 +89,12 @@ implementation:
         parser.add_argument("--model_py", type=str, required=True)
         parser.add_argument("--model_config", type=str, required=True)
         parser.add_argument("--learned_weights", type=str, required=True)
-        parser.add_argument("--test_data_json", type=str, required=True,
-                            help="Either a JSON string like '[\"a\",\"b\"]' OR a path to a .json file")
+        parser.add_argument(
+            "--test_data_json",
+            type=str,
+            required=True,
+            help="""Either a JSON string like '["a","b"]' OR a path to a .json file"""
+        )
         parser.add_argument("--max_new_tokens", type=int, default=64)
         parser.add_argument("--temperature", type=float, default=1.0)
         parser.add_argument("--top_k", type=int, default=50)
