--- a/generation.yaml
+++ b/generation.yaml
@@ -1,4 +1,4 @@
-name: Run Inference
+name: Run Inferencing
 description: |
   Loads Gemma3Model, generates text for multiple input prompts, and writes generation outputs to a JSON file.
   This version accepts test_data_json as either (A) a JSON string or (B) a path to a JSON file and prints helpful debug info.
@@ -173,7 +173,6 @@ implementation:
         print(f"[DEBUG] Raw test_data_json length={len(td)}; preview (first 1000 chars):")
         print(td[:1000])
         test_data = None
-        # if the arg is a path to an existing file, load it
         if os.path.exists(td):
             print(f"[DEBUG] Detected {td} as file path. Attempting to open as JSON file.")
             try:
@@ -183,19 +182,18 @@ implementation:
                 print(f"[ERROR] Failed to parse JSON file {td}: {e}")
                 raise
         else:
-            # try to parse as JSON string
             try:
                 test_data = json.loads(td)
             except json.JSONDecodeError as e:
-                # helpful debug and re-raise
                 print("[ERROR] json.loads failed on --test_data_json string.")
                 print(f"[ERROR] json.decoder message: {e.msg} (pos {e.pos})")
-                # show repr of the string trimmed to 2000 chars so you can inspect escaping
                 sample = repr(td[:2000])
                 print(f"[ERROR] test_data_json repr preview (truncated): {sample}")
-                raise RuntimeError("Invalid JSON passed to --test_data_json. "
-                                   "Either pass a valid JSON string (e.g. '[\"a\",\"b\"]') "
-                                   "or pass a file path to a .json file containing the list.") from e
+                print("[ERROR] Invalid JSON passed to --test_data_json. Either pass a valid JSON string "
+                      "(e.g. '[\"a\",\"b\"]') or pass a path to a .json file containing the list.")
+                import sys
+                sys.exit(2)
+
 
         if not isinstance(test_data, list):
             raise ValueError("test_data must be a JSON list of input prompt strings (e.g. [\"prompt1\",\"prompt2\"])")
